1998-11-14  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* debug.c (scm_debug_options): Bugfix: Set the value of
	scm_stack_checking_enabled_p after setting debug options;
	#include "stackchk.h".  (Thanks to Richard Polton.)

1998-11-13  Radey Shouman  <rshouman@metro2000.com>

	* unif.c (scm_array_contents): removed unnecessary test for 0
	base.

1998-11-13  Mikael Djurfeldt  <mdj@barbara.nada.kth.se>

	* evalext.c, evalext.h (scm_m_sequence_to_list): Removed.
	Replaced by macro `collect' in boot-9.scm.

1998-11-10  Mikael Djurfeldt  <mdj@barbara.nada.kth.se>

	* eval.c (scm_copy_tree): Copy source properties if existent.

	* debug.c (scm_start_stack): Copy source when evaluating.  (If we
	don't, we may end up passing memoized source to a transformer.)

1998-11-10  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* stack.c (get_applybody): Help function which lookups the first
	body form of the apply closure.
	(read_frames): Prevent the source of the first form of the apply
	closure from being recorded.  This would only be confusing.

	* debug.h (SCM_SET_MACROEXP, SCM_CLEAR_MACROEXP, SCM_MACROEXPP):
	Replaces SCM_MACROFRAME, SCM_MACROFRAMEP.
	
	* eval.c (SCM_CEVAL): Use SCM_SET/CLEAR_MACROEXP.

	* stacks.c (read_frame): Bugfix: Removed lingering `else'
	statement.
	(read_frames): Use SCM_MACROEXPP.

1998-11-10  Mikael Djurfeldt  <mdj@barbara.nada.kth.se>

	* stacks.c (read_frames): Skip gsubr frames in backtraces.  (They
	don't contain interesting information since all arguments are
	present in the frame which applies the compiled closure anyway.);
	Skip the transformer application frames.

	* print.c (scm_iprin1): Print gsubrs as primitives.

1998-11-09  Mikael Djurfeldt  <mdj@barbara.nada.kth.se>

	* debug.h (SCM_MACROFRAME, SCM_MACROFRAMEP): New frame type.

	* eval.c (SCM_CEVAL): Mark macro frames at `handle_a_macro' so
	that we can identify these in a backtrace.  (This change doesn't
	introduce any significant speed penalty.)
